# ncapture

./: .gitignore  CmakeLists.txt  README.md
SharedSwift/: Package.swift
SharedSwift/Sources/SharedSwift/: NetworkUtils.swift  Packet.swift  Protocols.swift
app/ncapture/ncapture/: CaptureControl.swift  CaptureData.swift  ColorExtensions.swift  ContentView.swift  NetworkUtils.swift  Packet.swift  ncaptureApp.swift
app/ncapture/ncapture.xcodeproj/: project.pbxproj
app/ncapture/ncapture.xcodeproj/project.xcworkspace/xcuserdata/neevcohen.xcuserdatad/: UserInterfaceState.xcuserstate
app/ncapture/ncapture.xcodeproj/project.xcworkspace/xcuserdata/root.xcuserdatad/: UserInterfaceState.xcuserstate
app/ncapture/ncapture.xcodeproj/xcshareddata/xcschemes/: ncapture.xcscheme
app/ncapture/ncapture.xcodeproj/xcuserdata/neevcohen.xcuserdatad/xcschemes/: xcschememanagement.plist
cli/: CMakeLists.txt  main.cpp  main.swift
lib/: CMakeLists.txt
lib/include/: file.hpp  if_utils.hpp  module.modulemap  noncopyable.hpp  sniffer.hpp  string_utils.hpp  types.hpp
lib/src/: file.cpp  if_utils.cpp  sniffer.cpp
